# pycsp3-explain

./: .gitignore  README.md  pyproject.toml  scratch_core.xml
examples/: example_marco.py  example_mss_relaxation.py  example_nqueens_conflict.py  example_optimal_mus.py  example_scheduling_conflict.py  example_simple_conflict.py  example_weighted_mss.py  simple.py  test.py
pycsp3_explain/: __init__.py
pycsp3_explain/explain/: __init__.py  marco.py  mss.py  mus.py  utils.py
pycsp3_explain/solvers/: __init__.py  wrapper.py
tests/: __init__.py  _pytest_stub.py  conftest.py  test_marco.py  test_mss.py  test_mus.py  test_optimal_mus.py
